fix player text align

--- a/music_player/dark.css
+++ b/music_player/dark.css
@@ -48,7 +48,7 @@ body {
 .song-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
   padding: 0px 20px 0px 20px;
   max-width: 300px;
 }
@@ -59,7 +59,6 @@ body {
 
 .song-title {
   font-size: 16px;
-  text-align: center;
 }
 
 i {
