--- a/music_player/light.css
+++ b/music_player/light.css
@@ -50,7 +50,7 @@ body {
 .song-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
   padding: 0px 20px 0px 20px;
 }
 
